iow spacing fixed

--- a/bank.css
+++ b/bank.css
@@ -6,6 +6,7 @@ body {
 	color: aliceblue;
 	background-repeat: no-repeat;
 	background-size: cover;
+	scroll-snap-type: y mandatory;
 	overflow-x: hidden;
 	z-index: -1;
 }
@@ -143,9 +144,7 @@ footer {
 }
 
 .display {
-
 	display: flex;
-
 }
 
 .intro1 {
@@ -221,7 +220,6 @@ footer {
 }
 
 .pyramid {
-
 	width: 100%;
 	height: 100%;
 }
@@ -388,8 +386,79 @@ footer {
 }
 
 #GW {
+	top: 50vh;
 	justify-content: center;
 	background-color: #04021A;
+	/* overflow: hidden; */
+}
+
+.room {
+	position: absolute;
+	height: 32rem;
+	width: 32rem;
+	background: linear-gradient(-40deg, rgba(65, 220, 220, 0.15) 10%, transparent 40%, transparent 60%, rgba(0, 128, 128, 0.15)) 90%,
+		linear-gradient(40deg, rgba(65, 220, 220, 0.15) 10%, transparent 40%, transparent 60%, rgba(0, 128, 128, 0.15)) 90%;
+	/* outline: 3px rgb(0, 0, 0) solid; */
+	outline-offset: -3px;
+	box-shadow: inset 2px 2px 1px rgba(184, 10, 228, 0.553),
+		inset -2px -2px 1px rgba(7, 189, 165, 0.5);
+	background-image: hsla(245, 53%, 17%, 0.3);
+	border: 2px solid rgb(29, 220, 134);
+	transition: .3s all;
+}
+
+.scene {
+	display: flex;
+	position: absolute;
+	flex-direction: column;
+	width: clamp(150px, 0.5vw, 25%);
+	height: 10vh;
+	margin-left: 0.75rem;
+	margin-top: -4.25rem;
+	justify-content: center;
+	align-items: center;
+	perspective: 1500px;
+	perspective-origin: 50% calc(50% - 300px);
+}
+
+.cube {
+	position: absolute;
+	top: 49vh;
+	height: 13rem;
+	width: 8rem;
+	transform-style: preserve-3d;
+	rotate: y 218deg;
+}
+
+.left_Sq {
+	translate: -53rem -2.2rem -1.75rem;
+	rotate: y -90deg;
+}
+
+.right_Sq {
+	left: 7rem;
+	rotate: y 90deg;
+}
+
+.top_Sq {
+	bottom: 7rem;
+	rotate: x 90deg;
+	background: hwb(181 58% 0% / 0.15);
+}
+
+.bottom_Sq {
+	translate: -23.1rem 4rem -11.3rem;
+	rotate: x -90deg;
+	background: rgba(21, 141, 141, 0.271);
+}
+
+.front_Sq {
+	translate: -49rem 6.2rem 22.5rem;
+	transform-style: preserve-3d;
+}
+
+.back_Sq {
+	translate: 0 0 -7rem;
 }
 
 .page5 {
@@ -400,26 +469,32 @@ footer {
 	margin: auto;
 }
 
+.stars {
+	background-image: url(assets/stars.png);
+	background-size: cover;
+	background: rgba(0, 0, 0, 0.23);
+	z-index: 110;
+}
+
 .product {
-display: flex;
-position: absolute;
+	display: flex;
+	position: absolute;
 	height: 400px;
 	width: 400px;
-inset: 0;
-margin: 0 auto;
-border-radius: 10px;
-
-background-size: cover;
-background: rgba(0, 0, 0, 0.23);
-background-image: url(assets/stars.png);
-z-index: 110;
+	inset: 0;
+	margin: 0 auto;
+	border-radius: 10px;
+	background-size: cover;
+	background: rgba(0, 0, 0, 0.23);
+	background-image: url(assets/stars.png);
+	z-index: 110;
 }
 
 .planet {
-position: absolute;
-    color: blue;
-    isolation: isolate;
-    border: 2px solid white;
+	position: absolute;
+	color: blue;
+	isolation: isolate;
+	border: 2px solid white;
 }
 
 .left {
@@ -433,7 +508,7 @@ position: absolute;
 @keyframes fadeDown {
 	from {
 		opacity: 0;
-		transform: translateY(100px);
+		transform: translateY(200px);
 	}
 
 	to {
@@ -447,8 +522,8 @@ position: absolute;
 	display: flex;
 	position: absolute;
 	bottom: -18.5vh;
-isolation: isolate;
-z-index: 200;
+	isolation: isolate;
+	z-index: 200;
 }
 
 .feature_GW {
@@ -465,17 +540,17 @@ z-index: 200;
 
 .feature_GW>div {
 	display: flex;
-clip-path: polygon(0% 0%, 0% 100%, 5% 100%, 5% 5%, 95% 5%, 95% 85%, 0% 85%, 0 100%, 100% 100%, 100% 0%);
+	clip-path: polygon(0% 0%, 0% 100%, 5% 100%, 5% 5%, 95% 5%, 95% 85%, 0% 85%, 0 100%, 100% 100%, 100% 0%);
 	min-width: 400px;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
 	scroll-snap-align: center;
-z-index: -1;
+	z-index: -1;
 }
 
 .feature_GW::-webkit-scrollbar {
-display: none;
+	display: none;
 }
 
 .left nav a {
@@ -489,24 +564,24 @@ display: none;
 }
 
 .buybox {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 1rem;
-    top: 0;
+	display: flex;
+	position: absolute;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 1rem;
+	top: 0;
 }
 
 #buynav {
-inset: 0;
-margin: 0 auto;
-height: fit-content;
-width: fit-content;
-padding: 2px;
+	inset: 0;
+	margin: 0 auto;
+	height: fit-content;
+	width: fit-content;
+	padding: 2px;
 	border: 2px solid rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.4);
-box-shadow:  0 4px 2px #000000cc, 2px 0px 3px #000000cc, -2px 0px 3px #000000cc;
+	box-shadow: 0 4px 2px #000000cc, 2px 0px 3px #000000cc, -2px 0px 3px #000000cc;
 }
 
 #red {
@@ -538,10 +613,10 @@ box-shadow:  0 4px 2px #000000cc, 2px 0px 3px #000000cc, -2px 0px 3px #000000cc;
 }
 
 .well {
-display: flex;
-align-items: center;
-width: 50%;
-right: 0;
+	display: flex;
+	align-items: center;
+	width: 50%;
+	right: 0;
 }
 
 .g_well {
@@ -592,4 +667,9 @@ right: 0;
 	transform: translate(-1rem, 5rem);
 	background-image: radial-gradient(circle at 10% -10%, rgba(255, 255, 255, 0.725) 0%, transparent 40%),
 		radial-gradient(circle at 20% 40%, black, rgb(59, 13, 3), rgb(0, 0, 0) 80%);
+}
+
+#booty {
+	background: #000000;
+	z-index: -10;
 }
