--- a/iow.css
+++ b/iow.css
@@ -1,10 +1,19 @@
 body {
 	background-color: rgb(192, 167, 94);
+min-height: 100vh;
 }
 
 header,
 footer {
 	background: rgb(157, 10, 103);
+}
+
+.cent {
+	position: sticky;
+	top: 5vh;
+	height: 7vh;
+	text-align: center;
+	margin: auto;
 }
 
 header {
